[package]
name = "artnet_protocol"
version = "0.4.3"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
description = "A 1:1 implementation of the ArtNet protocol"
license = "MIT"
documentation = "https://docs.rs/artnet_protocol"
repository = "https://github.com/trangar/artnet_protocol"
edition = "2018"

[dependencies]
bitflags = "2.4"
byteorder = "1.4"
